--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 # Dev environment
 /.direnv/
+
+# Tree-sitter generated files
+src/parser.c
+src/grammar.json
+src/node-types.json
+src/tree_sitter/
