--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 # Dev environment
 /.direnv/
 
-# Tree-sitter generated files
-src/parser.c
-src/grammar.json
-src/node-types.json
-src/tree_sitter/
+# Build outputs.
 voloscript.so
 
 # Cache directories.
