--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
   },
   "dependencies": {
     "tree-sitter-cli": "^0.26.3"
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.voloscript",
+      "file-types": [
+        "script"
+      ],
+      "highlights": [
+        "queries/highlights.scm"
+      ]
+    }
+  ]
 }
