Tweak minor inconsistencies in config

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "file-types": [
         "script"
       ],
+      "injection-regex": "^voloscript$",
       "highlights": [
         "queries/highlights.scm"
       ]
